Fix size issues in main app used tabs to display month and week views fix dugs in MonthView_Controller.java and WeekView_Controller.java